--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,15 +21,16 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
+    
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
 
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/femto_edit.js
+          files: dist/femto_edit.js, dist/femto_edit_bookmarklet.js
           tag_name: v${{ github.run_number }}
           name: Release v${{ github.run_number }}
           body: |
