--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,15 +21,24 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
+    
       - name: Build
-        run: npm run build
-
+        run: |
+          npm run build
+          echo "javascript:((() => { $(cat dist/femto_edit.js)})())" > dist/femto_edit_bookmarklet.js
+    
+      - name: Create bookmarklet markdown
+        id: bookmarklet
+        run: |
+          echo "bookmarklet<<EOF" >> $GITHUB_OUTPUT
+          cat dist/femto_edit_bookmarklet.js | sed 's/\\/\\\\/g; s/"/\\"/g; s/'"'"'/\\'"'"'/g' >> $GITHUB_OUTPUT
+          echo EOF >> $GITHUB_OUTPUT
+    
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/femto_edit.js
+          files: dist/femto_edit.js, dist/femto_edit_bookmarklet.js
           tag_name: v${{ github.run_number }}
           name: Release v${{ github.run_number }}
           body: |
@@ -37,6 +46,11 @@ jobs:
             
             Changes in this release:
             ${{ github.event.head_commit.message }}
+    
+            ## Bookmarklet
+            <a href='${{ steps.bookmarklet.outputs.bookmarklet }}'>Bookmarklet</a>
+    
+            You can also find the raw bookmarklet in the releases assets.
           draft: false
           prerelease: false
         env:
